# sigma-boy

./: .gitignore  CMakeLists.txt  add_workout.cpp  add_workout.h  add_workout.ui  carddelegate.cpp  carddelegate.h  cardwidget.cpp  cardwidget.h  file.aps  file.rc  insert_complex.cpp  insert_complex.h  insert_complex.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.cpp  models.h  statisticwindow.cpp  statisticwindow.h  statisticwindow.ui
